<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_blank"
            android:icon="@drawable/ic_blank"
            android:title= "@string/item_blank" />
        <item
            android:id="@+id/nav_physyology"
            android:icon="@drawable/ic_human"
            android:title="@string/item_physyology" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_statistic"
            android:title="@string/item_statistic" />
        <item
            android:id="@+id/nav_consumables_changing"
            android:icon="@drawable/ic_change"
            android:title="@string/item_consumables_changing" />
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_play"
            android:title="@string/item_start" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/item_settings" />
        <item
            android:id="@+id/nav_reference"
            android:icon="@drawable/ic_reference"
            android:title="@string/item_reference" />
    </group>

</menu>
